# digikam-debianscreenshot

./: CMakeLists.txt  README.md  bootstrap-linux.sh  dsmpform.cpp  dsmpform.h  dspackagedelegate.cpp  dsplugin.cpp  dsplugin.h  dsplugin.qrc  dstalker.cpp  dswidget.cpp  dswidget.h  dswindow.cpp
cmake/modules/: PluginI18n.cmake
cmake/templates/: i18n.qrc.in_cmake
i18n/: es.ts  i18n.qrc  i18n_list.cmake
icons/: CMakeLists.txt
res/: dsplugin.qrc
src/: dscommon.h  dspackagedelegate.h  dsplugin.cpp  dsplugin.h  dstalker.h  dswidget.cpp  dswindow.cpp  dswindow.h
